--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,14 +267,13 @@
     "from scipy.stats import chi2_contingency\n",
     "\n",
     "train_data = pd.read_csv(\"train.csv\")\n",
-    "test_data = pd.read_csv(\"test.csv\")\n",
     "\n",
     "train_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +309,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +441,7 @@
        "max      1.000000    3.000000   80.000000    8.000000    6.000000  512.329200"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +471,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +618,7 @@
        "831         1       2    male  0.83      1      1   18.7500      NaN        S"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -643,8 +642,8 @@
       "{'female', 'male'}\n",
       "{0, 1, 2, 3, 4, 5, 8}\n",
       "{0, 1, 2, 3, 4, 5, 6}\n",
-      "{'C', 'S', 'Q', nan}\n",
-      "{'E25', 'C7', 'A7', 'F E69', 'C82', 'C83', 'B38', 'C86', 'B28', 'D35', 'C124', 'C85', 'A32', 'D21', 'B71', 'E8', 'D9', 'B78', 'E67', 'C70', 'A24', 'B101', 'E58', 'B79', 'C99', 'E24', 'E33', 'A36', 'C50', 'G6', 'E101', 'D26', 'B20', 'B69', 'A6', 'B49', 'C49', 'A23', 'A14', 'E50', 'C30', 'E10', 'B18', 'D30', 'D28', 'C123', 'D20', 'C110', 'D56', 'B51 B53 B55', 'C23 C25 C27', 'E31', 'A20', 'F2', 'D37', 'D48', 'B5', 'D7', 'C46', 'A31', 'B19', 'A16', 'C101', 'C148', 'B37', 'E38', 'B22', 'B80', 'B35', 'C68', 'B73', 'D45', 'E63', 'A19', 'C52', 'B50', 'D47', 'D', 'C91', 'D46', 'D50', 'T', 'E36', 'B3', 'D19', 'F33', 'D49', 'E49', 'C92', 'C93', 'A34', 'B41', 'B58 B60', 'E121', 'B42', 'B4', 'F G73', 'E34', 'C87', 'C128', 'D11', 'C65', 'D15', 'C22 C26', 'A5', 'F38', 'C104', 'E68', 'C45', 'C90', 'A26', 'A10', 'D10 D12', 'E46', 'C95', 'B57 B59 B63 B66', 'C106', 'F4', 'C111', 'C2', 'C32', 'E17', 'D17', 'C47', 'E44', 'C54', 'D6', 'B96 B98', 'C118', 'B77', 'E12', 'B39', 'E40', nan, 'C62 C64', 'F G63', 'C125', 'C78', 'D36', 'B86', 'E77', 'C103', 'B102', 'B82 B84', 'C126', 'D33', 'B94', 'B30'}\n"
+      "{nan, 'C', 'Q', 'S'}\n",
+      "{'B51 B53 B55', 'D', 'E36', 'D47', 'D36', 'B82 B84', 'B58 B60', 'C123', 'B49', 'F E69', 'E44', 'E101', 'C83', 'B19', 'E10', 'E12', 'B38', 'D48', 'C32', 'F G73', 'B77', 'B73', 'B57 B59 B63 B66', 'D11', 'B20', 'A26', 'E40', 'E67', 'F2', 'C22 C26', 'A34', 'E17', 'C49', 'E121', 'C68', 'B94', 'B79', 'C65', 'C95', 'D9', 'C85', 'A16', 'B101', 'C47', 'B71', 'E24', 'C50', 'D21', 'E25', 'B22', 'C90', 'B80', 'B28', 'D56', 'E34', 'C7', 'C118', 'C45', 'C106', 'C104', 'B37', 'E68', 'B41', 'F G63', 'E49', 'C93', 'B5', 'D30', 'C87', 'E63', 'F38', 'C52', 'E77', 'D6', 'C101', 'D28', 'T', 'D49', 'C78', 'D15', 'E46', 'C124', 'C125', 'C54', 'E58', 'D10 D12', 'C103', 'B96 B98', 'C46', 'D35', 'C23 C25 C27', 'B39', 'F4', 'D33', 'B3', 'D20', 'C82', 'C148', 'C126', 'C111', 'B86', 'C91', 'A36', 'E50', 'B69', 'G6', 'C110', 'A10', 'C62 C64', 'A6', 'D37', 'B18', 'D46', 'D50', 'A19', 'D7', 'B78', 'B4', 'A24', 'A14', 'B35', 'B30', 'C92', 'A7', 'C2', 'A20', 'D45', 'D17', 'D26', 'B50', 'A5', 'C128', 'D19', nan, 'F33', 'E33', 'A23', 'E31', 'B42', 'E8', 'C70', 'E38', 'C86', 'A31', 'C99', 'B102', 'A32', 'C30'}\n"
      ]
     }
    ],
@@ -680,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +688,7 @@
        "<Axes: xlabel='Survived'>"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -712,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +749,7 @@
        "<Axes: xlabel='Survived'>"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -773,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +809,7 @@
        "<Axes: xlabel='Survived'>"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -833,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +869,7 @@
        "<Axes: xlabel='Survived'>"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -893,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +929,7 @@
        "<Axes: xlabel='Survived'>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -953,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1029,7 @@
        "<Axes: xlabel='Age', ylabel='Count'>"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1053,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1061,7 @@
        "<Axes: title={'center': 'Age'}, xlabel='Survived'>"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1085,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1157,7 @@
        "<Axes: xlabel='Fare', ylabel='Count'>"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1180,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1188,7 @@
        "<Axes: title={'center': 'Fare'}, xlabel='Survived'>"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1212,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1429,7 @@
        "[891 rows x 6 columns]"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1449,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1477,8 @@
        "      <th>Sex</th>\n",
        "      <th>SibSp</th>\n",
        "      <th>Parch</th>\n",
-       "      <th>Embarked</th>\n",
+       "      <th>C</th>\n",
+       "      <th>Q</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1489,7 +1489,8 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>S</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1498,7 +1499,8 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>C</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1507,7 +1509,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>S</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1516,7 +1519,8 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>S</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1525,7 +1529,8 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>S</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1535,80 +1540,88 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>886</th>\n",
+       "      <th>884</th>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>S</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>885</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>887</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>888</th>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>889</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>890</th>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Q</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>891 rows × 6 columns</p>\n",
+       "<p>889 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Survived  Pclass  Sex  SibSp  Parch Embarked\n",
-       "0           0       3    1      1      0        S\n",
-       "1           1       1    0      1      0        C\n",
-       "2           1       3    0      0      0        S\n",
-       "3           1       1    0      1      0        S\n",
-       "4           0       3    1      0      0        S\n",
-       "..        ...     ...  ...    ...    ...      ...\n",
-       "886         0       2    1      0      0        S\n",
-       "887         1       1    0      0      0        S\n",
-       "888         0       3    0      1      2        S\n",
-       "889         1       1    1      0      0        C\n",
-       "890         0       3    1      0      0        Q\n",
+       "     Survived  Pclass  Sex  SibSp  Parch  C  Q\n",
+       "0           0       3    1      1      0  0  0\n",
+       "1           1       1    0      1      0  1  0\n",
+       "2           1       3    0      0      0  0  0\n",
+       "3           1       1    0      1      0  0  0\n",
+       "4           0       3    1      0      0  0  0\n",
+       "..        ...     ...  ...    ...    ... .. ..\n",
+       "884         0       2    1      0      0  0  0\n",
+       "885         1       1    0      0      0  0  0\n",
+       "886         0       3    0      1      2  0  0\n",
+       "887         1       1    1      0      0  1  0\n",
+       "888         0       3    1      0      0  0  1\n",
        "\n",
-       "[891 rows x 6 columns]"
+       "[889 rows x 7 columns]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from sklearn.preprocessing import MultiLabelBinarizer\n",
+    "\n",
     "def gender_to_bool(a):\n",
     "    if a.strip() == 'male':\n",
     "        return 1\n",
@@ -1616,18 +1629,111 @@
     "        return 0\n",
     "\n",
     "train_data[\"Sex\"] = train_data[\"Sex\"].apply(gender_to_bool)\n",
-    "train_data"
+    "\n",
+    "train_data.dropna(subset = \"Embarked\", inplace = True, ignore_index = True)\n",
+    "binarizer = pd.get_dummies(train_data[\"Embarked\"], dtype= int).iloc[:,0:2]\n",
+    "train_data = pd.concat([train_data,binarizer], axis = 1)\n",
+    "train_data.drop(columns = \"Embarked\", inplace = True)\n",
+    "train_data\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 324,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(622, 6)\n",
+      "(622,)\n",
+      "The importante of feature 'Pclass' is 20.27%\n",
+      "The importante of feature 'Sex' is 53.36%\n",
+      "The importante of feature 'SibSp' is 8.56%\n",
+      "The importante of feature 'Parch' is 9.88%\n",
+      "The importante of feature 'C' is 4.21%\n",
+      "The importante of feature 'Q' is 3.72%\n"
+     ]
+    }
+   ],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "clf = RandomForestClassifier(max_depth=2, random_state=0)"
+    "test_data = pd.read_csv(\"test.csv\") # Doesn't have Survived columns  \n",
+    "\n",
+    "X = train_data.iloc[:,1:]\n",
+    "Y = train_data[\"Survived\"]\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size = 0.3, random_state=0)\n",
+    "print(X_train.shape)\n",
+    "print(Y_train.shape)\n",
+    "\n",
+    "clf = RandomForestClassifier(n_estimators = 150, max_depth = 6, random_state = 1)\n",
+    "clf.fit(X_train, Y_train)\n",
+    "\n",
+    "# Relevance of each feature predicting Survived variable\n",
+    "\n",
+    "importances = clf.feature_importances_\n",
+    "columns = X_train.columns\n",
+    "i = 0\n",
+    "\n",
+    "while i < len(columns):\n",
+    "    print(f\"The importante of feature '{columns[i]}' is {round(importances[i]*100,2)}%\")\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(267, 6)\n",
+      "(267,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.7677902621722846"
+      ]
+     },
+     "execution_count": 325,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(X_test.shape)\n",
+    "print(Y_test.shape)\n",
+    "\n",
+    "predictions = clf.predict(X_test)\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    "\n",
+    "# Goodness of prediction\n",
+    "\n",
+    "accuracy_score(Y_test, predictions)"
    ]
   }
  ],
